BUGFIX: fix issue in prod with timeouts. We don't want to timeout other reads if one read times out, stalling other threads